Change data raw path

--- a/config/main.yaml
+++ b/config/main.yaml
@@ -1,9 +1,3 @@
-defaults:
-  - process: process1
-  - model: model1
-  - _self_
-
 data:
-  raw: data/raw/sample.csv
-  processed: data/processed/processed.csv
-  final: data/final/final.csv
+  raw: data/raw/odor.csv
+ 
