"Updated config/main.yaml, removed train_path and test_path, added model_path; modified src/train_model.py to save model to file; updated requirements.txt"

--- a/config/main.yaml
+++ b/config/main.yaml
@@ -6,5 +6,4 @@ column:
   smile: ["nonStereoSMILES"]
   drop: ['descriptors']
 
-train_path: data/processed/train_dataset.pkl
-test_path: data/processed/test_dataset.pkl
+model_path: ./models/model.pt
